src/objects/Contact_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Contacts_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attitudes__c</fullName>
        <label>Attitudes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Burning Platform</fullName>
                </value>
                <value>
                    <fullName>Statu Quo</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authority__c</fullName>
        <label>Authority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Cycle__c</fullName>
        <label>Buying Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awareness of Needs</fullName>
                </value>
                <value>
                    <fullName>Assessments of Alternatives</fullName>
                </value>
                <value>
                    <fullName>Alleviation of Risks</fullName>
                </value>
                <value>
                    <fullName>Achievements of Results</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competing_Company_Relationship__c</fullName>
        <label>Competing Company Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Positive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts Assessments</relationshipLabel>
        <relationshipName>Contacts_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Focus__c</fullName>
        <label>Focus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Controller</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generation__c</fullName>
        <label>Generation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Influence__c</fullName>
        <label>Influence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contacts Assessments</relationshipLabel>
        <relationshipName>ContactsAssessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Our_Relationship__c</fullName>
        <label>Our Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact Assessment</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nombre de Contact Assessment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>